--- a/oresources/minecraft/lang/en_us.lang
+++ b/oresources/minecraft/lang/en_us.lang
@@ -188,8 +188,8 @@ spectatorMenu.root.prompt=Press a key to select a command, and again to use it.
 
 selectWorld.gameMode=Game Mode
 selectWorld.gameMode.survival=Survival
-selectWorld.gameMode.survival.line1=Start running 
-selectWorld.gameMode.survival.line2=with unlimited deaths
+selectWorld.gameMode.survival.line1=Start running with unlimited deaths
+selectWorld.gameMode.survival.line2=
 selectWorld.gameMode.creative=Creative
 selectWorld.gameMode.creative.line1=Unlimited resources, free flying and
 selectWorld.gameMode.creative.line2=destroy blocks instantly
@@ -198,7 +198,7 @@ selectWorld.gameMode.spectator.line1=You can look but don't touch
 selectWorld.gameMode.spectator.line2=
 selectWorld.gameMode.hardcore=Hardcore
 selectWorld.gameMode.hardcore.line1=One life.
-selectWorld.gameMode.hardcore.line2=Once chance.
+selectWorld.gameMode.hardcore.line2=One chance.
 selectWorld.gameMode.adventure=Adventure
 selectWorld.gameMode.adventure.line1=Same as survival mode, but blocks can't
 selectWorld.gameMode.adventure.line2=be added or removed
