Lang changes and renamed items
Ender Token -> Trace of Death
Endurance -> Mana
EL -> Souls

--- a/oresources/enderskills/lang/en_us.lang
+++ b/oresources/enderskills/lang/en_us.lang
@@ -42,33 +42,33 @@ potion.effect.enderskills.potion_type_ender_effect=Strange Potion
 potion.effect.enderskills.potion_type_ability_power_effect_normal=Potion of Ability Power
 potion.effect.enderskills.potion_type_ability_power_effect_long=Potion of Ability Power
 potion.effect.enderskills.potion_type_ability_power_effect_strong=Potion of Ability Power II
-potion.effect.enderskills.potion_type_endurance_effect_normal=Potion of Endurance
-potion.effect.enderskills.potion_type_endurance_effect_strong=Potion of Endurance II
-potion.effect.enderskills.potion_type_endurance_regen_effect_normal=Potion of Endurance Regeneration
-potion.effect.enderskills.potion_type_endurance_regen_effect_long=Potion of Endurance Regeneration
-potion.effect.enderskills.potion_type_endurance_regen_effect_strong=Potion of Endurance Regeneration II
+potion.effect.enderskills.potion_type_endurance_effect_normal=Potion of Mana
+potion.effect.enderskills.potion_type_endurance_effect_strong=Potion of Mana II
+potion.effect.enderskills.potion_type_endurance_regen_effect_normal=Potion of Mana Regeneration
+potion.effect.enderskills.potion_type_endurance_regen_effect_long=Potion of Mana Regeneration
+potion.effect.enderskills.potion_type_endurance_regen_effect_strong=Potion of Mana Regeneration II
 potion.effect.enderskills.potion_type_cooldown_effect_normal=Potion of Cooldown
 potion.effect.enderskills.potion_type_cooldown_effect_long=Potion of Cooldown
 potion.effect.enderskills.potion_type_cooldown_effect_strong=Potion of Cooldown II
 splash_potion.effect.enderskills.potion_type_ability_power_effect_normal=Splash Potion of Ability Power
 splash_potion.effect.enderskills.potion_type_ability_power_effect_long=Splash Potion of Ability Power
 splash_potion.effect.enderskills.potion_type_ability_power_effect_strong=Splash Potion of Ability Power II
-splash_potion.effect.enderskills.potion_type_endurance_effect_normal=Splash Potion of Endurance
-splash_potion.effect.enderskills.potion_type_endurance_effect_strong=Splash Potion of Endurance II
-splash_potion.effect.enderskills.potion_type_endurance_regen_effect_normal=Splash Potion of Endurance
-splash_potion.effect.enderskills.potion_type_endurance_regen_effect_long=Splash Potion of Endurance
-splash_potion.effect.enderskills.potion_type_endurance_regen_effect_strong=Splash Potion of Endurance II
+splash_potion.effect.enderskills.potion_type_endurance_effect_normal=Splash Potion of Mana
+splash_potion.effect.enderskills.potion_type_endurance_effect_strong=Splash Potion of Mana II
+splash_potion.effect.enderskills.potion_type_endurance_regen_effect_normal=Splash Potion of Mana
+splash_potion.effect.enderskills.potion_type_endurance_regen_effect_long=Splash Potion of Mana
+splash_potion.effect.enderskills.potion_type_endurance_regen_effect_strong=Splash Potion of Mana II
 splash_potion.effect.enderskills.potion_type_cooldown_effect_normal=Splash Potion of Cooldown
 splash_potion.effect.enderskills.potion_type_cooldown_effect_long=Splash Potion of Cooldown
 splash_potion.effect.enderskills.potion_type_cooldown_effect_strong=Splash Potion of Cooldown II
 lingering_potion.effect.enderskills.potion_type_ability_power_effect_normal=Lingering Potion of Ability Power
 lingering_potion.effect.enderskills.potion_type_ability_power_effect_long=Lingering Potion of Ability Power
 lingering_potion.effect.enderskills.potion_type_ability_power_effect_strong=Lingering Potion of Ability Power II
-lingering_potion.effect.enderskills.potion_type_endurance_effect_normal=Lingering Potion of Endurance
-lingering_potion.effect.enderskills.potion_type_endurance_effect_strong=Lingering Potion of Endurance II
-lingering_potion.effect.enderskills.potion_type_endurance_regen_effect_normal=Lingering Potion of Endurance
-lingering_potion.effect.enderskills.potion_type_endurance_regen_effect_long=Lingering Potion of Endurance
-lingering_potion.effect.enderskills.potion_type_endurance_regen_effect_strong=Lingering Potion of Endurance II
+lingering_potion.effect.enderskills.potion_type_endurance_effect_normal=Lingering Potion of Mana
+lingering_potion.effect.enderskills.potion_type_endurance_effect_strong=Lingering Potion of Mana II
+lingering_potion.effect.enderskills.potion_type_endurance_regen_effect_normal=Lingering Potion of Mana
+lingering_potion.effect.enderskills.potion_type_endurance_regen_effect_long=Lingering Potion of Mana
+lingering_potion.effect.enderskills.potion_type_endurance_regen_effect_strong=Lingering Potion of Mana II
 lingering_potion.effect.enderskills.potion_type_cooldown_effect_normal=Lingering Potion of Cooldown
 lingering_potion.effect.enderskills.potion_type_cooldown_effect_long=Lingering Potion of Cooldown
 lingering_potion.effect.enderskills.potion_type_cooldown_effect_strong=Lingering Potion of Cooldown II
@@ -95,13 +95,13 @@ command.enderskills.advancement.invalid=Invalid argument
 command.enderskills.invalid.number=Must be a valid number
 command.enderskills.cooldown.reset=Success! Cooldowns are no more
 command.enderskills.cooldown.invalid=Invalid! Must have reset
-command.enderskills.endurance.reset=Success! Endurance is no more
+command.enderskills.endurance.reset=Success! Mana is no more
 command.enderskills.endurance.invalid=Invalid! Must have reset
 command.enderskills.config.reload.success=Success! Realoaded config files
 #UI
 enderskills.potion_ability_power_effect=Ability Power Effect
 enderskills.potion_cooldown_effect=Cooldown Effect
-enderskills.potion_endurance_effect=Endurance Effect
+enderskills.potion_endurance_effect=Mana Effect
 #----------------------------------------------------------------------------------------------------------------------#
 ui.enderskills.rotate_skill_group=%s
 ui.enderskills.altar_drop_line_0=Drop Ender Matrix
@@ -114,7 +114,7 @@ ui.enderskills.gui.store_xp=Store XP
 ui.enderskills.gui.take_xp=Take XP
 ui.enderskills.gui.xp=%s XP
 ui.enderskills.gui.xp_level=%s
-ui.enderskills.gui.levels=%s EL
+ui.enderskills.gui.levels=%s Souls
 ui.enderskills.gui.pin=Pin Page
 ui.enderskills.gui.unpin=Unpin Page
 ui.enderskills.gui.back=Go Back
@@ -135,12 +135,12 @@ ui.enderskills.gui.advancement.unlocked=%1$s to lock
 ui.enderskills.gui.advancement.description=§lAdvancement:§r
 ui.enderskills.gui.advancement.description_levels=\n§llvl §l%1$s §l-> §llvl §l%2$s§r\n
 ui.enderskills.gui.advancement.requires=§lRequirements:§r
-ui.enderskills.gui.advancement.requires_levels=\n- %s EL.
+ui.enderskills.gui.advancement.requires_levels=\n- %s Souls.
 ui.enderskills.gui.advancement.requires_xp=\n- %s XP.
 ui.enderskills.gui.advancement.undone_warning=\n\n§4This action cannot be undone.§r
 
 ui.enderskills.cooldown.timer=%1$ss
-ui.enderskills.endurance.title=Endurance
+ui.enderskills.endurance.title=Mana
 ui.enderskills.endurance.amount=%s
 ui.enderskills.skill_group.title=Abilities
 
@@ -162,7 +162,7 @@ ui.enderskills.page.fire.title=Fire
 #----------------------------------------------------------------------------------------------------------------------#
 ui.enderskills.desc.stats.shift=§f§l§oSHIFT for info.
 ui.enderskills.desc.stats.ctrl=§f§l§oCTRL for next.
-ui.enderskills.desc.stats.endurance=§fEndurance Cost: %1$s
+ui.enderskills.desc.stats.endurance=§fMana Cost: %1$s
 ui.enderskills.desc.stats.level_max=§f§lLevel: %1$s (§r§oMAX)
 ui.enderskills.desc.stats.level_current=§f§lLevel: §r§o%1$s
 ui.enderskills.desc.stats.level_next=§f§lLevel: §r§o%2$s
@@ -259,9 +259,9 @@ ui.enderskills.skill.electric_pulse.description=Electrifies and slows enemies. [
 ui.enderskills.skill.magnetic_pull.title=Magnetic Pull
 ui.enderskills.skill.magnetic_pull.description=Pulls towards you and slows enemies.
 ui.enderskills.skill.power_drain.title=Power Drain
-ui.enderskills.skill.power_drain.description=Steal the endurance from all enemies around you.
+ui.enderskills.skill.power_drain.description=Steal the mana from all enemies around you.
 ui.enderskills.skill.energize.title=Energize
-ui.enderskills.skill.energize.description=Refills target ally's endurance with your own.
+ui.enderskills.skill.energize.description=Refills target ally's mana with your own.
 ui.enderskills.skill.voltaic_sentinel.title=Voltaic Sentinel
 ui.enderskills.skill.voltaic_sentinel.description=Summons a sentinel to assist you and your teamates. [Applies Electric debuff]
 
@@ -299,8 +299,8 @@ ui.enderskills.skill.speed.title=Speed
 ui.enderskills.skill.speed.description=Increases the horizontal velocity of every step.
 ui.enderskills.skill.fall_resistance.title=Fall Resistance
 ui.enderskills.skill.fall_resistance.description=Damage reduction for fall damage.
-ui.enderskills.skill.endurance.title=Endurance
-ui.enderskills.skill.endurance.description=Increases endurance points.
+ui.enderskills.skill.endurance.title=Mana
+ui.enderskills.skill.endurance.description=Increases mana points.
 ui.enderskills.skill.stealth_damage.title=Stealth Damage
 ui.enderskills.skill.stealth_damage.description=Deals extra damage when melee attacks are out of the target's field of view.
 ui.enderskills.skill.swim_speed.title=Swim Speed
