New music system, couple other changes
- updated musictrigger to new music system, includes some tweaks to the music. The Deep Dark now includes periods of silence
- increased eyes in darkness spawns
- swapped eyes jumpscare sound (heh)
- disabled invisible creepers
- adjusted HUD
- changed button click sound (subject to change)
- removed music triggers reload keybinding

--- a/config/MusicTriggers/songs/assets/musictriggers/lang/en_us.lang
+++ b/config/MusicTriggers/songs/assets/musictriggers/lang/en_us.lang
@@ -1,134 +1,48 @@
 {
-item.musictriggers:(deepdark)anxiety_kevinmacleod.name=Music Disc
-item.record.(deepdark)anxiety_kevinmacleod.desc=Music Triggers - (deepdark)anxiety_kevinmacleod
-item.musictriggers:(deepdark)apprehensionkevinmacleod.name=Music Disc
-item.record.(deepdark)apprehensionkevinmacleod.desc=Music Triggers - (deepdark)apprehensionkevinmacleod
-item.musictriggers:(deepdark)childrenstheme_kevinmacleod.name=Music Disc
-item.record.(deepdark)childrenstheme_kevinmacleod.desc=Music Triggers - (deepdark)childrenstheme_kevinmacleod
-item.musictriggers:(deepdark)classichorror3_kevinmacleod.name=Music Disc
-item.record.(deepdark)classichorror3_kevinmacleod.desc=Music Triggers - (deepdark)classichorror3_kevinmacleod
-item.musictriggers:(deepdark)deepnoise_kevinmacleod.name=Music Disc
-item.record.(deepdark)deepnoise_kevinmacleod.desc=Music Triggers - (deepdark)deepnoise_kevinmacleod
-item.musictriggers:(deepdark)distanttension_kevinmacleod.name=Music Disc
-item.record.(deepdark)distanttension_kevinmacleod.desc=Music Triggers - (deepdark)distanttension_kevinmacleod
-item.musictriggers:(deepdark)eveningofchaos_kevinmacleod.name=Music Disc
-item.record.(deepdark)eveningofchaos_kevinmacleod.desc=Music Triggers - (deepdark)eveningofchaos_kevinmacleod
-item.musictriggers:(erebus)awkwardmeeting_kevinmacleod.name=Music Disc
-item.record.(erebus)awkwardmeeting_kevinmacleod.desc=Music Triggers - (erebus)awkwardmeeting_kevinmacleod
-item.musictriggers:(erebus)controlledchaos_kevinmacleod.name=Music Disc
-item.record.(erebus)controlledchaos_kevinmacleod.desc=Music Triggers - (erebus)controlledchaos_kevinmacleod
-item.musictriggers:(erebus)dopplerette_kevinmacleod.name=Music Disc
-item.record.(erebus)dopplerette_kevinmacleod.desc=Music Triggers - (erebus)dopplerette_kevinmacleod
-item.musictriggers:(erebus)echoesoftime_kevinmacleod.name=Music Disc
-item.record.(erebus)echoesoftime_kevinmacleod.desc=Music Triggers - (erebus)echoesoftime_kevinmacleod
-item.musictriggers:(erebus)heartofthebeast_kevinmacleod.name=Music Disc
-item.record.(erebus)heartofthebeast_kevinmacleod.desc=Music Triggers - (erebus)heartofthebeast_kevinmacleod
-item.musictriggers:(nether)aftermath_kevinmacleod.name=Music Disc
-item.record.(nether)aftermath_kevinmacleod.desc=Music Triggers - (nether)aftermath_kevinmacleod
-item.musictriggers:(nether)babayaga_monst3r.name=Music Disc
-item.record.(nether)babayaga_monst3r.desc=Music Triggers - (nether)babayaga_monst3r
-item.musictriggers:(nether)darkwalk_kevinmacleod.name=Music Disc
-item.record.(nether)darkwalk_kevinmacleod.desc=Music Triggers - (nether)darkwalk_kevinmacleod
-item.musictriggers:(nether)wecannotdefendyou_coagmusic.name=Music Disc
-item.record.(nether)wecannotdefendyou_coagmusic.desc=Music Triggers - (nether)wecannotdefendyou_coagmusic
-item.musictriggers:(nether)youknowwhatineed_coagmusic.name=Music Disc
-item.record.(nether)youknowwhatineed_coagmusic.desc=Music Triggers - (nether)youknowwhatineed_coagmusic
-item.musictriggers:(overworld)areyouinherewithus_coagmusic.name=Music Disc
-item.record.(overworld)areyouinherewithus_coagmusic.desc=Music Triggers - (overworld)areyouinherewithus_coagmusic
-item.musictriggers:(overworld)bluesizzle_kevinmacleod.name=Music Disc
-item.record.(overworld)bluesizzle_kevinmacleod.desc=Music Triggers - (overworld)bluesizzle_kevinmacleod
-item.musictriggers:(overworld)chasepulse_kevinmacleod.name=Music Disc
-item.record.(overworld)chasepulse_kevinmacleod.desc=Music Triggers - (overworld)chasepulse_kevinmacleod
-item.musictriggers:(overworld)controlledchaos(nopercussion)_kevinmacleod.name=Music Disc
-item.record.(overworld)controlledchaos(nopercussion)_kevinmacleod.desc=Music Triggers - (overworld)controlledchaos(nopercussion)_kevinmacleod
-item.musictriggers:(overworld)thearrival_monst3r.name=Music Disc
-item.record.(overworld)thearrival_monst3r.desc=Music Triggers - (overworld)thearrival_monst3r
-item.musictriggers:(deepdark)anxiety_kevinmacleod.name=Music Disc
-item.record.(deepdark)anxiety_kevinmacleod.desc=Music Triggers - (deepdark)anxiety_kevinmacleod
-item.musictriggers:(deepdark)apprehensionkevinmacleod.name=Music Disc
-item.record.(deepdark)apprehensionkevinmacleod.desc=Music Triggers - (deepdark)apprehensionkevinmacleod
-item.musictriggers:(deepdark)childrenstheme_kevinmacleod.name=Music Disc
-item.record.(deepdark)childrenstheme_kevinmacleod.desc=Music Triggers - (deepdark)childrenstheme_kevinmacleod
-item.musictriggers:(deepdark)classichorror3_kevinmacleod.name=Music Disc
-item.record.(deepdark)classichorror3_kevinmacleod.desc=Music Triggers - (deepdark)classichorror3_kevinmacleod
-item.musictriggers:(deepdark)deepnoise_kevinmacleod.name=Music Disc
-item.record.(deepdark)deepnoise_kevinmacleod.desc=Music Triggers - (deepdark)deepnoise_kevinmacleod
-item.musictriggers:(deepdark)distanttension_kevinmacleod.name=Music Disc
-item.record.(deepdark)distanttension_kevinmacleod.desc=Music Triggers - (deepdark)distanttension_kevinmacleod
-item.musictriggers:(deepdark)eveningofchaos_kevinmacleod.name=Music Disc
-item.record.(deepdark)eveningofchaos_kevinmacleod.desc=Music Triggers - (deepdark)eveningofchaos_kevinmacleod
-item.musictriggers:(erebus)awkwardmeeting_kevinmacleod.name=Music Disc
-item.record.(erebus)awkwardmeeting_kevinmacleod.desc=Music Triggers - (erebus)awkwardmeeting_kevinmacleod
-item.musictriggers:(erebus)controlledchaos_kevinmacleod.name=Music Disc
-item.record.(erebus)controlledchaos_kevinmacleod.desc=Music Triggers - (erebus)controlledchaos_kevinmacleod
-item.musictriggers:(erebus)dopplerette_kevinmacleod.name=Music Disc
-item.record.(erebus)dopplerette_kevinmacleod.desc=Music Triggers - (erebus)dopplerette_kevinmacleod
-item.musictriggers:(erebus)echoesoftime_kevinmacleod.name=Music Disc
-item.record.(erebus)echoesoftime_kevinmacleod.desc=Music Triggers - (erebus)echoesoftime_kevinmacleod
-item.musictriggers:(erebus)heartofthebeast_kevinmacleod.name=Music Disc
-item.record.(erebus)heartofthebeast_kevinmacleod.desc=Music Triggers - (erebus)heartofthebeast_kevinmacleod
-item.musictriggers:(nether)aftermath_kevinmacleod.name=Music Disc
-item.record.(nether)aftermath_kevinmacleod.desc=Music Triggers - (nether)aftermath_kevinmacleod
-item.musictriggers:(nether)babayaga_monst3r.name=Music Disc
-item.record.(nether)babayaga_monst3r.desc=Music Triggers - (nether)babayaga_monst3r
-item.musictriggers:(nether)darkwalk_kevinmacleod.name=Music Disc
-item.record.(nether)darkwalk_kevinmacleod.desc=Music Triggers - (nether)darkwalk_kevinmacleod
-item.musictriggers:(nether)wecannotdefendyou_coagmusic.name=Music Disc
-item.record.(nether)wecannotdefendyou_coagmusic.desc=Music Triggers - (nether)wecannotdefendyou_coagmusic
-item.musictriggers:(nether)youknowwhatineed_coagmusic.name=Music Disc
-item.record.(nether)youknowwhatineed_coagmusic.desc=Music Triggers - (nether)youknowwhatineed_coagmusic
-item.musictriggers:(overworld)areyouinherewithus_coagmusic.name=Music Disc
-item.record.(overworld)areyouinherewithus_coagmusic.desc=Music Triggers - (overworld)areyouinherewithus_coagmusic
-item.musictriggers:(overworld)bluesizzle_kevinmacleod.name=Music Disc
-item.record.(overworld)bluesizzle_kevinmacleod.desc=Music Triggers - (overworld)bluesizzle_kevinmacleod
-item.musictriggers:(overworld)chasepulse_kevinmacleod.name=Music Disc
-item.record.(overworld)chasepulse_kevinmacleod.desc=Music Triggers - (overworld)chasepulse_kevinmacleod
-item.musictriggers:(overworld)controlledchaos(nopercussion)_kevinmacleod.name=Music Disc
-item.record.(overworld)controlledchaos(nopercussion)_kevinmacleod.desc=Music Triggers - (overworld)controlledchaos(nopercussion)_kevinmacleod
-item.musictriggers:(overworld)thearrival_monst3r.name=Music Disc
-item.record.(overworld)thearrival_monst3r.desc=Music Triggers - (overworld)thearrival_monst3r
-item.musictriggers:aftermath_kevinmacleod.name=Music Disc
-item.record.aftermath_kevinmacleod.desc=Music Triggers - aftermath_kevinmacleod
-item.musictriggers:babayaga_monst3r.name=Music Disc
-item.record.babayaga_monst3r.desc=Music Triggers - babayaga_monst3r
-item.musictriggers:darkwalk_kevinmacleod.name=Music Disc
-item.record.darkwalk_kevinmacleod.desc=Music Triggers - darkwalk_kevinmacleod
-item.musictriggers:wecannotdefendyou_coagmusic.name=Music Disc
-item.record.wecannotdefendyou_coagmusic.desc=Music Triggers - wecannotdefendyou_coagmusic
-item.musictriggers:youknowwhatineed_coagmusic.name=Music Disc
-item.record.youknowwhatineed_coagmusic.desc=Music Triggers - youknowwhatineed_coagmusic
-item.musictriggers:anxiety_kevinmacleod.name=Music Disc
-item.record.anxiety_kevinmacleod.desc=Music Triggers - anxiety_kevinmacleod
-item.musictriggers:apprehensionkevinmacleod.name=Music Disc
-item.record.apprehensionkevinmacleod.desc=Music Triggers - apprehensionkevinmacleod
-item.musictriggers:childrenstheme_kevinmacleod.name=Music Disc
-item.record.childrenstheme_kevinmacleod.desc=Music Triggers - childrenstheme_kevinmacleod
-item.musictriggers:classichorror3_kevinmacleod.name=Music Disc
-item.record.classichorror3_kevinmacleod.desc=Music Triggers - classichorror3_kevinmacleod
-item.musictriggers:deepnoise_kevinmacleod.name=Music Disc
-item.record.deepnoise_kevinmacleod.desc=Music Triggers - deepnoise_kevinmacleod
-item.musictriggers:distanttension_kevinmacleod.name=Music Disc
-item.record.distanttension_kevinmacleod.desc=Music Triggers - distanttension_kevinmacleod
-item.musictriggers:eveningofchaos_kevinmacleod.name=Music Disc
-item.record.eveningofchaos_kevinmacleod.desc=Music Triggers - eveningofchaos_kevinmacleod
-item.musictriggers:awkwardmeeting_kevinmacleod.name=Music Disc
-item.record.awkwardmeeting_kevinmacleod.desc=Music Triggers - awkwardmeeting_kevinmacleod
-item.musictriggers:controlledchaos_kevinmacleod.name=Music Disc
-item.record.controlledchaos_kevinmacleod.desc=Music Triggers - controlledchaos_kevinmacleod
-item.musictriggers:dopplerette_kevinmacleod.name=Music Disc
-item.record.dopplerette_kevinmacleod.desc=Music Triggers - dopplerette_kevinmacleod
-item.musictriggers:echoesoftime_kevinmacleod.name=Music Disc
-item.record.echoesoftime_kevinmacleod.desc=Music Triggers - echoesoftime_kevinmacleod
-item.musictriggers:heartofthebeast_kevinmacleod.name=Music Disc
-item.record.heartofthebeast_kevinmacleod.desc=Music Triggers - heartofthebeast_kevinmacleod
-item.musictriggers:areyouinherewithus_coagmusic.name=Music Disc
-item.record.areyouinherewithus_coagmusic.desc=Music Triggers - areyouinherewithus_coagmusic
-item.musictriggers:bluesizzle_kevinmacleod.name=Music Disc
-item.record.bluesizzle_kevinmacleod.desc=Music Triggers - bluesizzle_kevinmacleod
-item.musictriggers:chasepulse_kevinmacleod.name=Music Disc
-item.record.chasepulse_kevinmacleod.desc=Music Triggers - chasepulse_kevinmacleod
-item.musictriggers:controlledchaos(nopercussion)_kevinmacleod.name=Music Disc
-item.record.controlledchaos(nopercussion)_kevinmacleod.desc=Music Triggers - controlledchaos(nopercussion)_kevinmacleod
-item.musictriggers:thearrival_monst3r.name=Music Disc
-item.record.thearrival_monst3r.desc=Music Triggers - thearrival_monst3r
+item.musictriggers:deepdark_anxiety_kevinmacleod.name=Music Disc
+item.record.deepdark_anxiety_kevinmacleod.desc=Music Triggers - deepdark_anxiety_kevinmacleod
+item.musictriggers:deepdark_apprehensionkevinmacleod.name=Music Disc
+item.record.deepdark_apprehensionkevinmacleod.desc=Music Triggers - deepdark_apprehensionkevinmacleod
+item.musictriggers:deepdark_childrenstheme_kevinmacleod.name=Music Disc
+item.record.deepdark_childrenstheme_kevinmacleod.desc=Music Triggers - deepdark_childrenstheme_kevinmacleod
+item.musictriggers:deepdark_classichorror3_kevinmacleod.name=Music Disc
+item.record.deepdark_classichorror3_kevinmacleod.desc=Music Triggers - deepdark_classichorror3_kevinmacleod
+item.musictriggers:deepdark_deepnoise_kevinmacleod.name=Music Disc
+item.record.deepdark_deepnoise_kevinmacleod.desc=Music Triggers - deepdark_deepnoise_kevinmacleod
+item.musictriggers:deepdark_distanttension_kevinmacleod.name=Music Disc
+item.record.deepdark_distanttension_kevinmacleod.desc=Music Triggers - deepdark_distanttension_kevinmacleod
+item.musictriggers:deepdark_eveningofchaos_kevinmacleod.name=Music Disc
+item.record.deepdark_eveningofchaos_kevinmacleod.desc=Music Triggers - deepdark_eveningofchaos_kevinmacleod
+item.musictriggers:erebus_awkwardmeeting_kevinmacleod.name=Music Disc
+item.record.erebus_awkwardmeeting_kevinmacleod.desc=Music Triggers - erebus_awkwardmeeting_kevinmacleod
+item.musictriggers:erebus_controlledchaos_kevinmacleod.name=Music Disc
+item.record.erebus_controlledchaos_kevinmacleod.desc=Music Triggers - erebus_controlledchaos_kevinmacleod
+item.musictriggers:erebus_dopplerette_kevinmacleod.name=Music Disc
+item.record.erebus_dopplerette_kevinmacleod.desc=Music Triggers - erebus_dopplerette_kevinmacleod
+item.musictriggers:erebus_echoesoftime_kevinmacleod.name=Music Disc
+item.record.erebus_echoesoftime_kevinmacleod.desc=Music Triggers - erebus_echoesoftime_kevinmacleod
+item.musictriggers:erebus_heartofthebeast_kevinmacleod.name=Music Disc
+item.record.erebus_heartofthebeast_kevinmacleod.desc=Music Triggers - erebus_heartofthebeast_kevinmacleod
+item.musictriggers:mainmenu_aftermath_kevinmacleod.name=Music Disc
+item.record.mainmenu_aftermath_kevinmacleod.desc=Music Triggers - mainmenu_aftermath_kevinmacleod
+item.musictriggers:nether_aftermath_kevinmacleod.name=Music Disc
+item.record.nether_aftermath_kevinmacleod.desc=Music Triggers - nether_aftermath_kevinmacleod
+item.musictriggers:nether_babayaga_monst3r.name=Music Disc
+item.record.nether_babayaga_monst3r.desc=Music Triggers - nether_babayaga_monst3r
+item.musictriggers:nether_darkwalk_kevinmacleod.name=Music Disc
+item.record.nether_darkwalk_kevinmacleod.desc=Music Triggers - nether_darkwalk_kevinmacleod
+item.musictriggers:nether_wecannotdefendyou_coagmusic.name=Music Disc
+item.record.nether_wecannotdefendyou_coagmusic.desc=Music Triggers - nether_wecannotdefendyou_coagmusic
+item.musictriggers:nether_youknowwhatineed_coagmusic.name=Music Disc
+item.record.nether_youknowwhatineed_coagmusic.desc=Music Triggers - nether_youknowwhatineed_coagmusic
+item.musictriggers:overworld_areyouinherewithus_coagmusic.name=Music Disc
+item.record.overworld_areyouinherewithus_coagmusic.desc=Music Triggers - overworld_areyouinherewithus_coagmusic
+item.musictriggers:overworld_bluesizzle_kevinmacleod.name=Music Disc
+item.record.overworld_bluesizzle_kevinmacleod.desc=Music Triggers - overworld_bluesizzle_kevinmacleod
+item.musictriggers:overworld_chasepulse_kevinmacleod.name=Music Disc
+item.record.overworld_chasepulse_kevinmacleod.desc=Music Triggers - overworld_chasepulse_kevinmacleod
+item.musictriggers:overworld_controlledchaosnopercussion_kevinmacleod.name=Music Disc
+item.record.overworld_controlledchaosnopercussion_kevinmacleod.desc=Music Triggers - overworld_controlledchaosnopercussion_kevinmacleod
+item.musictriggers:overworld_thearrival_monst3r.name=Music Disc
+item.record.overworld_thearrival_monst3r.desc=Music Triggers - overworld_thearrival_monst3r
 }
